@@ -24,7 +24,6 @@ import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import ch.dvbern.stip.api.benutzer.service.BenutzerService;
@@ -145,19 +144,23 @@ public class GesuchService {
 
     @Transactional
     public List<GesuchDto> findAllGesucheSb() {
-        return gesuchRepository.findAllFilteredForSb().map(this::mapWithTrancheToWorkWith).collect(Collectors.toList());
+        return gesuchRepository.findAllFilteredForSb().map(this::mapWithTrancheToWorkWith).toList();
     }
 
     @Transactional
     public List<GesuchDto> findGesucheSb() {
         final var benutzer = benutzerService.getCurrentBenutzer();
-        return gesuchRepository.findZugewiesenFilteredForSb(benutzer.getId()).map(this::mapWithTrancheToWorkWith).collect(Collectors.toList());
+        return gesuchRepository.findZugewiesenFilteredForSb(benutzer.getId())
+            .map(this::mapWithTrancheToWorkWith)
+            .toList();
     }
 
     @Transactional
     public List<GesuchDto> findGesucheGs() {
         final var benutzer = benutzerService.getCurrentBenutzer();
-        return gesuchRepository.findForGs(benutzer.getId()).map(this::mapWithTrancheToWorkWith).collect(Collectors.toList());
+        return gesuchRepository.findForGs(benutzer.getId())
+            .map(this::mapWithTrancheToWorkWith)
+            .toList();
     }
 
     @Transactional
